--- a/A03_SOMA_CODINGTEST/B_16_20/C19_D-12_260223.ipynb
+++ b/A03_SOMA_CODINGTEST/B_16_20/C19_D-12_260223.ipynb
@@ -5,23 +5,79 @@
    "execution_count": null,
    "id": "62fc32a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 1. 알고(구현): 백준 3085 (사탕 게임) - https://www.acmicpc.net/problem/3085\n",
     "import sys\n",
+    "from itertools import product\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3\n",
+    "CCP\n",
+    "CCP\n",
+    "PPC''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "    board = [list(input().rstrip()) for _ in range(N)]\n",
+    "\n",
+    "    def check(r, c):\n",
+    "        base = board[r][c]\n",
+    "\n",
+    "        max_hori = 1\n",
+    "        stack, visited = [c], {c}\n",
+    "        while stack:\n",
+    "            cur_c = stack.pop()\n",
+    "            for dc in [-1, +1]:\n",
+    "                nc = cur_c + dc\n",
+    "                if 0 <= nc < N and nc not in visited:\n",
+    "                    if base == board[r][nc]:\n",
+    "                        stack.append(nc)\n",
+    "                        visited.add(nc)\n",
+    "                        max_hori += 1\n",
+    "\n",
+    "        max_vert = 1\n",
+    "        stack, visited = [r], {r}\n",
+    "        while stack:\n",
+    "            cur_r = stack.pop()\n",
+    "            for dr in [-1, +1]:\n",
+    "                nr = cur_r + dr\n",
+    "                if 0 <= nr < N and nr not in visited:\n",
+    "                    if base == board[nr][c]:\n",
+    "                        stack.append(nr)\n",
+    "                        visited.add(nr)\n",
+    "                        max_vert += 1\n",
+    "\n",
+    "        return max(max_hori, max_vert)\n",
+    "\n",
+    "    answer = 0\n",
+    "    for r, c in product(range(N), repeat=2):\n",
+    "        answer = max(answer, check(r, c))\n",
+    "\n",
+    "    for r, c in product(range(N), repeat=2):\n",
+    "        for dr, dc in [(0, +1), (+1, 0)]:\n",
+    "            nr, nc = r + dr, c + dc\n",
+    "            if nr < N and nc < N and board[r][c] != board[nr][nc]:\n",
+    "                board[r][c], board[nr][nc] = board[nr][nc], board[r][c]\n",
+    "                answer = max(answer, check(r, c), check(nr, nc))\n",
+    "                board[r][c], board[nr][nc] = board[nr][nc], board[r][c]\n",
+    "\n",
+    "    print(answer)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -29,23 +85,44 @@
    "execution_count": null,
    "id": "5f85729d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "608\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 2. 알고(수학): 백준 1016 (제곱 ㄴㄴ 수) - https://www.acmicpc.net/problem/1016\n",
     "import sys\n",
+    "from math import isqrt\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''1 1000''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    MIN, MAX = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    trying = MAX-MIN + 1\n",
+    "    is_nono = [True] * trying\n",
+    "\n",
+    "    for i in range(2, isqrt(MAX) + 1):\n",
+    "        nomer = i*i\n",
+    "        remain = MIN % nomer\n",
+    "        start = MIN if remain == 0 else MIN - remain + nomer\n",
+    "\n",
+    "        for sqr_num in range(start, MAX + 1, nomer):\n",
+    "            is_nono[sqr_num - MIN] = False\n",
+    "\n",
+    "    print(is_nono.count(True))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -53,23 +130,46 @@
    "execution_count": null,
    "id": "be7d35ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "0\n",
+      "0\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 3. 알고(Map): 백준 2776 (암기왕) - https://www.acmicpc.net/problem/2776\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''1\n",
+    "5\n",
+    "4 1 5 2 3\n",
+    "5\n",
+    "1 3 7 9 5''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    nums = set(input().split())\n",
     "\n",
-    "    pass\n",
+    "    M = int(input())\n",
+    "    answers = map(lambda x: '1' if x in nums else '0', input().split())\n",
+    "\n",
+    "    print(\"\\n\".join(answers))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "T = int(input())\n",
+    "for _ in range(T):\n",
+    "    solve()\n"
    ]
   },
   {
@@ -77,23 +177,61 @@
    "execution_count": null,
    "id": "9ab6f72b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "185\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 4. 알고(그리디): 백준 13904 (과제) - https://www.acmicpc.net/problem/13904\n",
     "import sys\n",
+    "from bisect import bisect_left\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''7\n",
+    "4 60\n",
+    "4 40\n",
+    "1 20\n",
+    "2 50\n",
+    "3 30\n",
+    "4 10\n",
+    "6 5''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
     "\n",
-    "    pass\n",
+    "    # 딕셔너리로 같은 날짜들을 뫃아두고 힙을 이용해 푸는 방식도 있음\n",
+    "    tasks = [tuple(map(int, input().split())) for _ in range(N)]\n",
+    "    tasks.sort()\n",
+    "\n",
+    "    max_day = tasks[-1][0]\n",
+    "\n",
+    "    score = 0\n",
+    "    for day in range(max_day, 0, -1):\n",
+    "        can_solve_idx = bisect_left(tasks, day, key=lambda x: x[0])\n",
+    "\n",
+    "        solve_idx = -1\n",
+    "        max_value = 0\n",
+    "        for i in range(can_solve_idx, len(tasks)):\n",
+    "            if tasks[i][1] >= max_value:\n",
+    "                solve_idx = i\n",
+    "                max_value = tasks[i][1]\n",
+    "\n",
+    "        if solve_idx != -1:\n",
+    "            score += max_value\n",
+    "            del tasks[solve_idx]\n",
+    "\n",
+    "    print(score)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -102,32 +240,25 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "--  5. SQL(Lv.2): 조건에 부합하는 중고거래 상태 조회하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/164672\n",
+    "SELECT\n",
+    "    BOARD_ID,\n",
+    "    WRITER_ID,\n",
+    "    TITLE,\n",
+    "    PRICE,\n",
+    "    CASE\n",
+    "        WHEN STATUS = 'SALE' THEN '판매중'\n",
+    "        WHEN STATUS = 'RESERVED' THEN '예약중'\n",
+    "        WHEN STATUS = 'DONE' THEN '거래완료'\n",
+    "    END AS STATUS\n",
+    "FROM\n",
+    "    USED_GOODS_BOARD\n",
+    "WHERE\n",
+    "    CREATED_DATE = '2022-10-05'\n",
+    "ORDER BY\n",
+    "    BOARD_ID DESC;\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4d305b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "import sys\n",
-    "\n",
-    "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
-    "\n",
-    "input = sys.stdin.readline\n",
-    "\n",
-    "\n",
-    "def solve():\n",
-    "\n",
-    "    pass\n",
-    "\n",
-    "\n",
-    "solve()\n"
    ]
   },
   {
@@ -135,23 +266,113 @@
    "execution_count": null,
    "id": "44b2c219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3901\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 1. 알고(시뮬): 백준 23288 (주사위 굴리기 2) - https://www.acmicpc.net/problem/23288\n",
     "import sys\n",
+    "from itertools import product\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''4 5 1000\n",
+    "4 1 2 3 3\n",
+    "6 1 1 3 3\n",
+    "5 6 1 3 2\n",
+    "5 5 6 5 5''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, M, K = map(int, input().split())\n",
+    "    board = [list(map(int, input().split())) for _ in range(N)]\n",
     "\n",
-    "    pass\n",
+    "    # 0 동, 1 남, 2 서, 3 북\n",
+    "    directions = [(0, +1), (+1, 0), (0, -1), (-1, 0)]\n",
+    "    dice = [1, 6, 3, 4, 5, 2]  # 위, 아래, 오른(동), 왼(서), 앞(남), 뒤(북)\n",
+    "\n",
+    "    def roll(dir):\n",
+    "        top, botom, right, left, front, back = dice\n",
+    "        if dir == 0:            # 동 (오른)\n",
+    "            dice[:] = [left, right, top, botom, front, back]\n",
+    "\n",
+    "        elif dir == 1:          # 남 (아래)\n",
+    "            dice[:] = [back, front, right, left, top, botom]\n",
+    "\n",
+    "        elif dir == 2:          # 서 (왼)\n",
+    "            dice[:] = [right, left, botom, top, front, back]\n",
+    "\n",
+    "        elif dir == 3:          # 북 (위)\n",
+    "            dice[:] = [front, back, right, left, botom, top]\n",
+    "\n",
+    "    # 각 칸별 점수 미리 계산\n",
+    "    visited = [[False] * M for _ in range(N)]\n",
+    "    score_board = [[0] * M for _ in range(N)]\n",
+    "\n",
+    "    def dfs(r, c):\n",
+    "        base = board[r][c]\n",
+    "        stack = [(r, c)]\n",
+    "        visited[r][c] = True\n",
+    "\n",
+    "        for_score = [(r, c)]\n",
+    "        visit_sum = base\n",
+    "\n",
+    "        while stack:\n",
+    "            cr, cc = stack.pop()\n",
+    "            for dr, dc in directions:\n",
+    "                nr, nc = cr + dr, cc + dc\n",
+    "                if not (0 <= nr < N and 0 <= nc < M):\n",
+    "                    continue\n",
+    "\n",
+    "                if board[nr][nc] == base and not visited[nr][nc]:\n",
+    "                    visited[nr][nc] = True\n",
+    "                    visit_sum += board[nr][nc]\n",
+    "\n",
+    "                    stack.append((nr, nc))\n",
+    "                    for_score.append((nr, nc))\n",
+    "\n",
+    "        for row, col in for_score:  # 점수 갱신\n",
+    "            score_board[row][col] = visit_sum\n",
+    "\n",
+    "    for r, c in product(range(N), range(M)):\n",
+    "        if not visited[r][c]:\n",
+    "            dfs(r, c)\n",
+    "\n",
+    "    # 게임 시작.\n",
+    "    sqre_posi = [0, 0, 0]   # row, col, dirs\n",
+    "    score = 0\n",
+    "\n",
+    "    while K > 0:\n",
+    "        r, c, dir = sqre_posi\n",
+    "\n",
+    "        dr, dc = directions[dir]\n",
+    "        nr, nc = r + dr,  c + dc\n",
+    "        if not (0 <= nr < N and 0 <= nc < M):   # 넘어가면 반대 방향으로 전환\n",
+    "            dir = (dir + 2) % 4\n",
+    "            dr, dc = directions[dir]\n",
+    "            nr, nc = r + dr,  c + dc\n",
+    "\n",
+    "        roll(dir)                       # 1. 이동 방향 정하고, 주사위 굴리기\n",
+    "        score += score_board[nr][nc]    # 2. 점수 획득\n",
+    "\n",
+    "        A = dice[1]\n",
+    "        B = board[nr][nc]               # 3. 다음 방향 설정\n",
+    "        nxt_dir = (dir + 1) % 4 if A > B else (dir - 1) % 4 if A < B else dir\n",
+    "\n",
+    "        sqre_posi = [nr, nc, nxt_dir]   # 주사위 정보 입력\n",
+    "        K -= 1                          # 다음턴\n",
+    "\n",
+    "    print(score)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -159,23 +380,55 @@
    "execution_count": null,
    "id": "7310d5de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "10 20 30 50\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 2. 알고(DP): 백준 14002 (가장 긴 증가하는 부분 수열 4) - https://www.acmicpc.net/problem/14002\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''6\n",
+    "10 20 10 30 20 50''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
+    "    nums = list(map(int, input().split()))\n",
     "\n",
-    "    pass\n",
+    "    # 가장 긴 증가하는 수열 길이\n",
+    "    dp = [1] * N\n",
+    "    prev = list(range(N))  # 이전 노드 인덱스\n",
+    "\n",
+    "    for i in range(1, N):\n",
+    "        for j in range(i):\n",
+    "            if nums[j] < nums[i]:\n",
+    "                if dp[i] < dp[j] + 1:\n",
+    "                    dp[i] = dp[j] + 1\n",
+    "                    prev[i] = j\n",
+    "\n",
+    "    i = dp.index(max(dp))\n",
+    "    answer = [nums[i]]\n",
+    "\n",
+    "    while prev[i] != i:\n",
+    "        i = prev[i]\n",
+    "        answer.append(nums[i])\n",
+    "\n",
+    "    answer.reverse()\n",
+    "    print(len(answer))\n",
+    "    print(*answer)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -183,23 +436,127 @@
    "execution_count": null,
    "id": "f78dd7c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 3. 알고(그래프): 백준 5972 (택배 배송) - https://www.acmicpc.net/problem/5972\n",
     "import sys\n",
+    "from heapq import heappush, heappop\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''6 8\n",
+    "4 5 3\n",
+    "2 4 0\n",
+    "4 1 4\n",
+    "2 1 1\n",
+    "5 6 1\n",
+    "3 6 2\n",
+    "3 2 6\n",
+    "3 4 4''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, M = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    graph = [[] for _ in range(N + 1)]\n",
+    "\n",
+    "    for _ in range(M):\n",
+    "        a, b, c = map(int, input().split())\n",
+    "        graph[a].append((b, c))\n",
+    "        graph[b].append((a, c))\n",
+    "\n",
+    "    min_cost = [float('inf')] * (N + 1)\n",
+    "    min_cost[1] = 0\n",
+    "    pq = [(0, 1)]\n",
+    "\n",
+    "    while pq:\n",
+    "        cur_cost, cur = heappop(pq)\n",
+    "        if cur == N:\n",
+    "            break\n",
+    "\n",
+    "        if cur_cost > min_cost[cur]:\n",
+    "            continue\n",
+    "\n",
+    "        for nxt, cost in graph[cur]:\n",
+    "            nxt_cost = cur_cost + cost\n",
+    "            if nxt_cost < min_cost[nxt]:\n",
+    "                min_cost[nxt] = nxt_cost\n",
+    "                heappush(pq, (nxt_cost, nxt))\n",
+    "    print(min_cost[N])\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4d305b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "970\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4. 알고(백트래킹): 백준 3980 (선발 명단) - https://www.acmicpc.net/problem/3980\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''1\n",
+    "100 0 0 0 0 0 0 0 0 0 0\n",
+    "0 80 70 70 60 0 0 0 0 0 0\n",
+    "0 40 90 90 40 0 0 0 0 0 0\n",
+    "0 40 85 85 33 0 0 0 0 0 0\n",
+    "0 70 60 60 85 0 0 0 0 0 0\n",
+    "0 0 0 0 0 95 70 60 60 0 0\n",
+    "0 45 0 0 0 80 90 50 70 0 0\n",
+    "0 0 0 0 0 40 90 90 40 70 0\n",
+    "0 0 0 0 0 0 50 70 85 50 0\n",
+    "0 0 0 0 0 0 66 60 0 80 80\n",
+    "0 0 0 0 0 0 50 50 0 90 88''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def solve():\n",
+    "    players = [tuple(map(int, input().split())) for _ in range(11)]\n",
+    "\n",
+    "    max_sum = 0\n",
+    "\n",
+    "    def dfs(confirm, ability_sum, bit_mask):\n",
+    "        nonlocal max_sum\n",
+    "\n",
+    "        if confirm == 11:\n",
+    "            max_sum = max(max_sum, ability_sum)\n",
+    "            return\n",
+    "\n",
+    "        for i, score in enumerate(players[confirm]):\n",
+    "            if score == 0 or bit_mask & (1 << i):\n",
+    "                continue\n",
+    "\n",
+    "            dfs(confirm + 1, ability_sum + score, bit_mask | (1 << i))\n",
+    "\n",
+    "    dfs(0, 0, 0)\n",
+    "    print(max_sum)\n",
+    "\n",
+    "\n",
+    "T = int(input())\n",
+    "for _ in range(T):\n",
+    "    solve()"
    ]
   },
   {
@@ -208,14 +565,54 @@
    "metadata": {},
    "source": [
     "```sql\n",
+    "-- 5. SQL(Lv.4): 그룹별 조건에 맞는 식당 목록 출력하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/131124\n",
+    "WITH\n",
+    "    BEST_RV AS (\n",
+    "        SELECT \n",
+    "            MEMBER_ID,\n",
+    "            RANK() OVER (\n",
+    "                ORDER BY\n",
+    "                    COUNT(*) DESC\n",
+    "            ) AS RNK\n",
+    "        FROM \n",
+    "            REST_REVIEW\n",
+    "        GROUP BY\n",
+    "            MEMBER_ID\n",
+    "    )\n",
     "\n",
+    "SELECT\n",
+    "    MEMBER_NAME,\n",
+    "    REVIEW_TEXT,\n",
+    "    DATE_FORMAT(REVIEW_DATE, '%Y-%m-%d') AS REVIEW_DATE\n",
+    "FROM BEST_RV\n",
+    "JOIN REST_REVIEW  USING (MEMBER_ID)\n",
+    "JOIN MEMBER_PROFILE USING (MEMBER_ID)\n",
+    "WHERE RNK = 1\n",
+    "ORDER BY\n",
+    "    REVIEW_DATE ASC,\n",
+    "    REVIEW_TEXT ASC;\n",
     "```"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "251117_MathForPython",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
