--- a/A03_SOMA_CODINGTEST/B_16_20/C20_D-11_260224.ipynb
+++ b/A03_SOMA_CODINGTEST/B_16_20/C20_D-11_260224.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 1. 알고(구현): 백준 14719 (빗물) - https://www.acmicpc.net/problem/14719\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(수학): 백준 1747 (소수&팰린드롬) - https://www.acmicpc.net/problem/1747\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(Map): 백준 1972 (놀라운 문자열) - https://www.acmicpc.net/problem/1972\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(그리디): 백준 16120 (PPAP) - https://www.acmicpc.net/problem/16120\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -102,7 +102,8 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.2): 진료과별 예약 횟수 출력하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/132202\n",
     "```"
    ]
   },
@@ -113,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 1. 알고(시뮬): 백준 17837 (새로운 게임 2) - https://www.acmicpc.net/problem/17837\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -137,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 2. 알고(DP): 백준 1937 (욕심쟁이 판다) - https://www.acmicpc.net/problem/1937\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -161,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 3. 알고(그래프): 백준 13913 (숨바꼭질 4) - https://www.acmicpc.net/problem/13913\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -185,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 4. 알고(백트래킹): 백준 12100 (2048 (Easy)) - https://www.acmicpc.net/problem/12100\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
@@ -208,7 +209,7 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "\n",
+    "-- 5. SQL(Lv.5): 상품을 구매한 회원 비율 구하기 - https://school.programmers.co.kr/learn/courses/30/lessons/131534\n",
     "```"
    ]
   }
