--- a/A03_SOMA_CODINGTEST/B_16_20/C20_D-11_260224.ipynb
+++ b/A03_SOMA_CODINGTEST/B_16_20/C20_D-11_260224.ipynb
@@ -26,26 +26,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "5f85729d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(수학): 백준 1747 (소수&팰린드롬) - https://www.acmicpc.net/problem/1747\n",
     "import sys\n",
+    "from math import isqrt\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''31''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N = int(input())\n",
     "\n",
-    "    pass\n",
+    "    def is_pelin(num):\n",
+    "        str_num = str(num)\n",
+    "        return str_num == str_num[::-1]\n",
+    "\n",
+    "    def is_prime(num):\n",
+    "        if num == 1:\n",
+    "            return False\n",
+    "\n",
+    "        for denom in range(2, isqrt(num) + 1):\n",
+    "            if num % denom == 0:\n",
+    "                return False\n",
+    "        return True\n",
+    "\n",
+    "    number = N\n",
+    "    while True:\n",
+    "        if is_pelin(number) and is_prime(number):\n",
+    "            print(number)\n",
+    "            break\n",
+    "        number += 1\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -53,23 +81,65 @@
    "execution_count": null,
    "id": "be7d35ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ZGBG is surprising.\n",
+      "X is surprising.\n",
+      "EE is surprising.\n",
+      "AAB is surprising.\n",
+      "AABA is surprising.\n",
+      "AABB is NOT surprising.\n",
+      "BCBABCC is NOT surprising.\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(Map): 백준 1972 (놀라운 문자열) - https://www.acmicpc.net/problem/1972\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''ZGBG\n",
+    "X\n",
+    "EE\n",
+    "AAB\n",
+    "AABA\n",
+    "AABB\n",
+    "BCBABCC\n",
+    "*''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    def d_find(str_len):\n",
+    "        for length in range(2, str_len + 1):\n",
+    "            d_pair = set()\n",
+    "            for start in range(0, str_len - length + 1):\n",
+    "                end = start + length - 1\n",
+    "                temp = string[start] + string[end]\n",
+    "                if temp not in d_pair:\n",
+    "                    d_pair.add(temp)\n",
+    "                else:\n",
+    "                    return False\n",
+    "        return True\n",
+    "\n",
+    "    while True:\n",
+    "        string = input().rstrip()\n",
+    "        if string == '*':\n",
+    "            break\n",
+    "        str_len = len(string)\n",
+    "\n",
+    "        if d_find(str_len):\n",
+    "            print(f\"{string} is surprising.\")\n",
+    "        else:\n",
+    "            print(f\"{string} is NOT surprising.\")\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -77,23 +147,41 @@
    "execution_count": null,
    "id": "9ab6f72b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PPAP\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(그리디): 백준 16120 (PPAP) - https://www.acmicpc.net/problem/16120\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''PPPAPAP''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    ppap = list(input().rstrip())\n",
+    "    stack = []\n",
     "\n",
-    "    pass\n",
+    "    for char in ppap:\n",
+    "        stack.append(char)\n",
+    "        if len(stack) >= 4 and stack[-4:] == ['P', 'P', 'A', 'P']:\n",
+    "            del stack[-3:]\n",
+    "\n",
+    "    if stack == ['P']:\n",
+    "        print('PPAP')\n",
+    "    else:\n",
+    "        print('NP')\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -104,6 +192,18 @@
     "```sql\n",
     "-- 5. SQL(Lv.2): 진료과별 예약 횟수 출력하기 \n",
     "-- https://school.programmers.co.kr/learn/courses/30/lessons/132202\n",
+    "SELECT \n",
+    "    MCDP_CD AS 진료과코드,\n",
+    "    COUNT(*) AS `5월예약건수` -- 백틱\n",
+    "FROM \n",
+    "    APPOINTMENT \n",
+    "WHERE\n",
+    "    APNT_YMD LIKE '2022-05%'\n",
+    "GROUP BY\n",
+    "    MCDP_CD\n",
+    "ORDER BY\n",
+    "    `5월예약건수` ASC,\n",
+    "    진료과코드 ASC;\n",
     "```"
    ]
   },
@@ -215,8 +315,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "251117_MathForPython",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
